# agent-service

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  None  README.md  opencode.json  pyproject.toml  requirements.txt
docs/: opencode-skills.md
ide-plugin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
openclaw_architecture_research/: 01-openclaw-architecture-graph.md  02-adaptation-plan-for-agent-service.md  03-step-by-step-implementation-plan.md
opencode-wrapper/: package-lock.json  package.json  server.mjs
scripts/: smoke-opencode-e2e.ps1  start-agent-service.ps1  start-local.ps1  start-opencode-adapter.ps1  stop-agent-service.ps1  stop-local.ps1  stop-opencode-adapter.ps1
tests/: test_artifact_store.py  test_chat_api.py  test_chat_intent.py  test_config_safety.py  test_embeddings_store.py  test_feature_file.py  test_feature_generator_normalization_meta.py  test_gherkin_parameter_rendering.py  test_gigachat_adapter.py  test_jira_testcase_pipeline.py  test_job_dispatcher.py  test_job_worker.py  test_jobs_api.py  test_llm_client.py  test_memory_api.py  test_memory_rules_api.py  test_opencode_adapter_api.py  test_opencode_process_supervisor.py  test_opencode_runtime_api.py  test_orchestrator_apply_feature_safety.py  test_postgres_chat_state_store.py  test_postgres_policy_store.py  test_postgres_run_state_store.py  test_repo_scanner_additional_roots.py  test_runs_sessions_policy_api.py  test_self_healing_components.py  test_startup_readiness.py  test_step_extractor_java_kotlin.py  test_step_extractor_russian.py  test_step_learning_boost.py  (+9 more)
(+157 files in other folders)
