[project]
name = "agent-service"
version = "0.1.0"
description = "Backend сервис для плагина Sber IDE (каркас)."
authors = [{ name = "Agent Service" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "autogen==0.3.2",
    "chromadb==0.5.4",
]

[project.scripts]
agent-service = "app.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
